Fix scaling and scrollbars

--- a/src/components/dynpanel.css
+++ b/src/components/dynpanel.css
@@ -1,27 +1,9 @@
 .config-ui .panel {
-  /* resize: both; */
-  overflow: hidden;
-  position: relative;
 }
-
-/* 
-.config-ui .panel::after {
-  pointer-events: none;
-  content: "";
-  font-size: 14px;
-  position: absolute;
-  height: 22px;
-  width: 22px;
-  text-align: center;
-  bottom: 2px;
-  right: -2px;
-  z-index: 2;
-  background-color: #efefef;
-} */
 
 .panel {
   display: inline-flex;
-  overflow: scroll;
+  overflow: auto;
   border: 0.1rem solid var(--elem-border-color);
   border-radius: 0.1rem;
   padding: 0.1rem;
@@ -77,5 +59,4 @@
   flex-shrink: 1;
   flex-grow: 0;
   border: none;
-  /* padding: 0; */
 }
