--- a/src/components/splitter.css
+++ b/src/components/splitter.css
@@ -1,6 +1,7 @@
 .splitter {
   background: var(--elem-border-color);
   padding: 0.1rem;
+  box-sizing: border-box;
 }
 
 .config-ui .splitter {
